--- a/AttendanceSystem/App.config
+++ b/AttendanceSystem/App.config
@@ -22,7 +22,8 @@
        user id=sa;password=asd123;
        MultipleActiveResultSets=True;App=EntityFramework&quot;" 
        providerName="System.Data.EntityClient" />-->
-    <add name="AttendanceSystemDBEntities" connectionString="metadata=res://*/AttandenceSystem.csdl|res://*/AttandenceSystem.ssdl|res://*/AttandenceSystem.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PH5TFS1\PICOLIGHT;initial catalog=AttendanceSystemDB;user id=sa;password=asd123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AttendanceSystemDBEntities" connectionString="metadata=res://*/AttandenceSystem.csdl|res://*/AttandenceSystem.ssdl|res://*/AttandenceSystem.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+      data source=TECHNSOFT\TECHNSOFT;initial catalog=AttendanceSystemDB;user id=sa;password=asd123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
